		  pear/nomnom.o to be built
		- now _requires_ config.cache to be present to work
		- removed code for including C++ header with mt19937_64

		bin/innocent-pear-c++.cc :
		- now uses KeccakWidth1600_SpongePRG_Instance, instead of
		  mt19937_64, as its PRNG
		- changed `-Wa,--Xinnocent-pear=dogecoin...' option so that
		  it passes a seed to share/innocent-pear/calm

		share/innocent-pear/calm.cc :
		- now accepts seed from `--Xinnocent-pear-dogecoin...' option
		  instead of computing its own seed

		share/innocent-pear/omnomnom.lxx :
		- now uses KeccakWidth1600_SpongePRG_Instance, instead of
		  mt19937_64, as its PRNG

		share/innocent-pear/nomnom.cc :
		- removed

		include/innocent-pear/host/lolcat.h :
		- removed unneeded file_crc64(...) prototype

		configure :
		- removed check for std::mt19937_64 and boost::mt19937_64

		.gitignore :
		- added `keccak' (actually infra/keccak/)

2016-09-10	ohai moar plz

		include/innocent-pear/ohai.h :
		- new

		include/innocent-pear/omg.h ,
		share/innocent-pear/doge-01.cc :
		- changed to use ohai.h

		include/innocent-pear/lolwut.h ,
		include/innocent-pear/rofl.h :
		- now checks existence of __clang__ in addition to checking
		  __GNUC__ and __GNUC_MINOR__

		GNUmakefile :
		- added ohai.h as a dependency and installable

2016-09-09	"Hummingbirds never remember the words to songs."

		share/innocent-pear/doge-01.cc :
		- added frobbing of /dev/tty
		- further reduced layers of operand scrambling

		share/innocent-pear/doge-03.cc :
		- added frobbing of /dev/tty

		include/innocent-pear/omg.h :
		- rearranged logic to hopefully give more weight to
		  (permitted) unsafe operations
		- added frobbing of /dev/tty

		include/innocent-pear/dawg.h :
		- redefined dawg_impl<...> to include a level count in its
		  template parameters
		- added check against infinite template recursion
		- added >> operator for dawg_impl<...> (and dawg<...>)

		include/innocent-pear/yodawg.h :